ajout de top banner

--- a/hello.html
+++ b/hello.html
@@ -1,10 +1,13 @@
 <html>
 
-<head></head>
+<head>
+<title> Cours Git </title>
+ <link rel="stylesheet" href="style.css">
+</head>
 
 <body>
 
-	<div> HELLO WORLD !!!	</div>
+	<div class="top-banner"> HELLO WORLD !!!	</div>
 
 </body>
 
