--- a/hello.html
+++ b/hello.html
@@ -6,12 +6,17 @@
 </head>
 
 <body>
-
+<!-- titre -->
 	<div class="top-banner"> HELLO WORLD !!!	</div>
+	<!-- description -->
 	<div>
+	<h1> ma description</>
 		<p>premier exercice d'aplication </p>
 	</div>
-
+<div>
+	<h1> ma recomponse</>
+		<p> en construction....  </p>
+	</div>
 </body>
 
 </html>
