ajout d'un gist

--- a/hello.html
+++ b/hello.html
@@ -10,17 +10,22 @@
 	<div class="top-banner"> HELLO WORLD !!!	</div>
 	<!-- description -->
 	<div>
-	<h1> ma description</>
+	<h1> ma description</h1>
 		<p>premier exercice d'aplication </p>
 	</div>
 <div>
-	<h1> ma recomponse</>
+	<h1> ma recomponse</h1>
 		<p> en construction....  </p>
 	</div>
 	
 	<div>
-	<h1> second modif master</>
+	<h1> second modif master</h1>
 		<p> it's about second modif master ..... </p>
+	</div>
+	
+	<div>
+		<h1> segment de code sur github </h1>
+		<script src="https://gist.github.com/soften-partner/0517c0df3ed5a3ad2093deebded04b6c.js"></script>
 	</div>
 	
 </body>
