--- a/hello.html
+++ b/hello.html
@@ -27,7 +27,7 @@
 		<h1> segment de code sur github </h1>
 		<script src="https://gist.github.com/soften-partner/0517c0df3ed5a3ad2093deebded04b6c.js"></script>
 	</div>
-	
+	<div><h2>test modif depot distant to get in depot locale</h2></div>
 </body>
 
 </html>
